Fix containers from overflowing

--- a/frontend/src/presentation/components/ProfileContainer.module.css
+++ b/frontend/src/presentation/components/ProfileContainer.module.css
@@ -1,10 +1,19 @@
 .container {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: end;
+    gap: 2em;
+    padding: 8px 0;
+}
+
+.profileContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
     align-items: center;
-    column-gap: calc(1.5rem + 1.5vw);
-    margin-bottom: 2em;
+    gap: 2em;
+    height: 100%;
 }
 
 .profilePicture {
@@ -16,51 +25,78 @@
 
 .profileDetailsContainer {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    column-gap: calc(1.5rem + 1.5vw);
-    padding: 0 2em;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    gap: 8px;
 }
 
 .nameRow {
     display: flex;
     flex-direction: row;
     align-items: center;
-    column-gap: 1em;
-    margin-bottom: 0;
+    gap: 8px;
 }
 
 .name {
     font-size: 3em;
     font-weight: 300;
     margin: 0;
-    max-width: 350px;
+    max-width: 500px;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
 }
 
 .editIcon {
-    font-size: 1.5em;
+    font-size: 1.2em;
     cursor: pointer;
+    transition: opacity 0.2s ease;
+    opacity: 50%;
+}
+.editIcon:hover {
+    opacity: 100%;
 }
 
-.linksContainer {
+.deactivateAndadminLinksContainer {
     display: flex;
-    flex-direction: row;
-    column-gap: 2em;
+    gap: 12px;
+}
+
+.adminLinkItem {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    font-weight: bold;
+}
+.adminLinkItem span[role="img"],
+.adminLinkItem a {
+    color: black;
+    transition: all 0.5s ease;
+}
+
+.adminLinkItem:hover a,
+.adminLinkItem:hover span[role="img"] {
+    color: #ffa500;
+    transform: translateY(-5px);
 }
 
 .emailAndDeactivate {
     display: flex;
-    align-items: center;
-    gap: 8px;
+    flex-direction: column;
+    align-items: start;
+    gap: 4px;
 }
 
 .deactivate {
     color: #007bff;
     cursor: pointer;
+    transition: color 0.2s ease;
+    margin-right: 12px;
+}
+
+.deactivate:hover {
+    color: red;
 }
 
 .email {
@@ -68,4 +104,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    display: flex;
+    align-items: flex-end;
+    gap: 8px;
 }
