--- a/frontend/src/presentation/pages/HomePage.module.css
+++ b/frontend/src/presentation/pages/HomePage.module.css
@@ -3,26 +3,43 @@
     flex-direction: row;
     width: 100%;
     height: 100%;
+    box-sizing: border-box;
 }
 
-.leftContainer, .rightContainer {
+.leftContainer,
+.rightContainer {
     display: flex;
     flex-direction: column;
     width: 30%;
+    position: relative;
 }
 
 .leftContainer {
     position: relative;
     align-items: center;
-    padding: 0 5%;
+    padding: 0 12px;
     background-color: #f1f1f1;
     row-gap: 5%;
 }
 
 .rightContainer {
     width: 70%;
-    row-gap: 10%;
-    padding: 3% 3%;
+    height: 100%;
+    position: relative;
+    padding: 24px 32px;
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+    box-sizing: border-box;
+}
+
+.profileContainer {
+    position: absolute;
+}
+.recentAttempsContainer {
+    margin-top: 160px;
+    overflow-y: auto;
+    width: 100%;
 }
 
 .headline {
